added a focus section

--- a/B12A01-landing-launchpad/index.html
+++ b/B12A01-landing-launchpad/index.html
@@ -147,6 +147,20 @@
 
            </section>
 
+           <!-- Ready to focus better- section  -->
+            <section class="focus">
+                <h2>Ready to focus better</h2>
+                <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+               <div class="button">
+                <a href="" class="btn-primary">Ger Started Free</a>
+                </div>
+                <div class="image">
+                <img src="Assets/wc-big.png" alt="">
+                </div>
+
+                
+            </section>
+
 
     </main>
     <footer>
