Changed logo typography in the header section

--- a/B12A01-landing-launchpad/index.html
+++ b/B12A01-landing-launchpad/index.html
@@ -18,7 +18,7 @@
     <header class="header">
         <!-- navbar section -->
         <nav>
-            <a href="" class="logo">LOGO</a>
+            <a href="" class="logo inter-for-data">LOGO</a>
             <!-- <button class="btn-primary">Sign Up</button> -->
              <a href="" class="btn-primary">Sign Up</a>
         </nav>
@@ -190,7 +190,7 @@
 
     </main>
     <footer>
-
+       
     </footer>
 
 </body>
