--- a/B12A01-landing-launchpad/index.html
+++ b/B12A01-landing-launchpad/index.html
@@ -195,7 +195,7 @@
         <a href="" class="logo inter-for-data">LOGO</a>
         <p>Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
        </div>
-       <nav class="nav-contant">
+       <nav>
        <ul>
         <li><a href="">Home</a></li>
         <li><a href="">About</a></li>
