Update button style and added hover effect

--- a/B12A01-landing-launchpad/index.html
+++ b/B12A01-landing-launchpad/index.html
@@ -152,7 +152,7 @@
                 <h2>Ready to focus better</h2>
                 <p>This template instantly leveled up our presence.” – Studio Vertex</p>
                <div class="button">
-                <a href="" class="btn-primary">Ger Started Free</a>
+                <a href="" class="btn-primary">Get Started Free</a>
                 </div>
 
                 <img src="Assets/wc-big.png" alt="">
